# runtime-registry

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  example_dll.cpp  example_dll_registry.h  main.cpp  named_type.h  registry_helpers.h  runtime.h
